# simple-stock-tracker-cli-sync

./: Cargo.toml  shell.nix
src/: args.rs  error.rs  main.rs  tests.rs  types.rs
