[package]
name = "simple-stock-tracker-cli-sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }

yahoo_finance_api = { version="1.3" }